// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getGraphOrder gets graph order 1`] = `
[
  "E",
  "D",
  "B",
  "C",
  "A",
]
`;

exports[`getGraphOrder hoists inside graph 1`] = `
[
  "E",
  "F",
  "D",
  "B",
  "C",
  "A",
]
`;

exports[`getGraphOrder hoists leaf in graph 1`] = `
[
  "F",
  "E",
  "D",
  "B",
  "C",
  "A",
]
`;
